--- a/wc-bangkok-2019/sass/_form.scss
+++ b/wc-bangkok-2019/sass/_form.scss
@@ -39,7 +39,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 		position: fixed;
 		bottom: 10px;
 		right: 10px;
-		z-index: 100;
+		z-index: 90;
 	}
 }
 
